--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     />
 
     <title>Frontend Mentor | Tip calculator app</title>
+
     <link rel="stylesheet" href="styles.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Space+Mono:700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
     person Total / person Reset
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
   </body>
 </html>
